--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,14 @@ app/Foundation-5/img/
 app/Foundation-5/js/
 app/Foundation-5/js/foundation/
 app/Foundation-5/js/vendor/
+app/Foundation-6/
+app/Foundation-6/css/
+app/Foundation-6/img/
+app/Foundation-6/js/
+app/Foundation-6/js/foundation/
+app/Foundation-6/js/vendor/
 app/images/
+app/test.html/
 app/page1_images/
 app/scripts/html5shiv.min.js
 app/scripts/jquery-1.11.2.js
