--- a/.gitignore
+++ b/.gitignore
@@ -46,29 +46,39 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-dist/
-.git/
-FILES/
-node_modules/
-test/
-.sass-cache/
-car-rental-foundation/foundation-icons/
-car-rental-foundation/ie8-min.css.map
-car-rental-foundation/CHANGELOG.md
-car-rental-foundation/normalize-min.css.map
-car-rental-foundation/style-min.css.map
-car-rental-foundation/style.css.map
-car-rental-foundation/normalize.css.map
-car-rental-foundation/ie8.css.map
-car-rental-foundation/images/
-car-rental-foundation/fonts/
-car-rental-foundation/styles/scss/
 
-car-rental-foundation/scripts/dist-motion-ui/
-car-rental-foundation/scripts/dist-what-input/
-car-rental-foundation/scripts/jquery/
-car-rental-foundation/scripts/Respond-master/
-car-rental-foundation/scripts/html5shiv.min.js
-car-rental-foundation/scripts/selectivizr.js
-car-rental-foundation/scripts/selectivizr-min.js
-car-rental-foundation/scripts/jquery.validate.min.js
+Files/
+npm-debug.log
+node_modules/
+crossdomain.xml
+browserconfig.xml
+crossdomain.xml
+apple-touch-icon.png
+.vscode/
+bower_components/
+nbproject/
+.git/
+_assets/
+.sass-cache/
+.settings/
+
+
+car-rental-app/foundation-icons/
+car-rental-app/images/
+car-rental-app/images/images/
+car-rental-app/fonts/
+car-rental-app/scripts/dist-motion-ui/
+car-rental-app/scripts/dist-what-input/
+car-rental-app/scripts/jquery/
+car-rental-app/scripts/old-browser-scripts/
+car-rental-app/scripts/dist/
+car-rental-app/nbproject/
+car-rental-app/styles/.sass-cache/
+car-rental-app/styles/style.css.map
+
+car-rental-app/ie8.css.map
+car-rental-app/normalize.css.map
+
+
+
+car-rental-app/favicons/
