--- a/package.json
+++ b/package.json
@@ -1,51 +1,38 @@
 {
-  "name": "car-rental-foundation",
+  "name": "car-rental-app",
   "version": "1.0.0",
-  "description": "Basic template for a new Foundation for Sites project.",
-  "main": "index.html",
+  "main": "car-rental-app/index.html",
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-htmlmin": "^2.4.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-qunit": "^2.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^3.2.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-mkdir": "^1.0.0",
+    "grunt-responsive-images": "^1.10.1"
+  },
+  "author": "raymond thompson",
+  "license": "MIT",
+  "directories": {
+    "test": "test"
+  },
+  "repository": "https://github.com/raythompsonwebdev/car-rental-foundation.git",
+  "bugs": {
+    "url": "https://github.com/raythompsonwebdev/car-rental-foundation/issues"
+  },
+  "homepage": "https://github.com/raythompsonwebdev/car-rental-foundation#readme",
+  "description": "car rental booking website",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "browser-sync": "^2.18.13",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.5",
-    "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "lost": "^8.2.0",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "rucksack-css": "^1.0.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zurb/foundation-sites-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/zurb/foundation-sites-template/issues"
-  },
-  "homepage": "https://github.com/zurb/foundation-sites-template#readme",
-  "directories": {
-    "doc": "docs",
-    "test": "test"
-  },
-  "dependencies": {
-    "jquery": "^3.2.1"
-  },
-  "author": "Raymond Thompson",
-  "license": "MIT"
+  "keywords": [
+    "car rental"
+  ]
 }
