--- a/package.json
+++ b/package.json
@@ -1,47 +1,57 @@
 {
-    "name": "car-rental-app",
-    "version": "1.0.0",
-    "main": "index.js",
-    "dependencies": {
-        "node-sass": "^5.0.0"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.13.0",
-        "@babel/core": "^7.13.8",
-        "@babel/node": "^7.13.0",
-        "@babel/preset-env": "^7.13.9",
-        "body-parser": "^1.19.0",
-        "express": "^4.17.1",
-        "grunt": "^1.3.0",
-        "grunt-contrib-clean": "^2.0.0",
-        "grunt-contrib-concat": "^1.0.1",
-        "grunt-contrib-copy": "^1.0.0",
-        "grunt-contrib-htmlmin": "^3.1.0",
-        "grunt-contrib-nodeunit": "^2.1.0",
-        "grunt-contrib-sass": "^2.0.0",
-        "grunt-contrib-uglify": "^5.0.0",
-        "grunt-contrib-watch": "^1.0.0",
-        "grunt-mkdir": "^1.0.0",
-        "grunt-responsive-images": "^1.10.1",
-        "mongoose": "^5.11.19",
-        "nodemon": "^2.0.7"
-    },
-    "author": "raymond thompson",
-    "license": "MIT",
-    "directories": {
-        "test": "test"
-    },
-    "repository": "https://github.com/raythompsonwebdev/car-rental-foundation.git",
-    "bugs": {
-        "url": "https://github.com/raythompsonwebdev/car-rental-foundation/issues"
-    },
-    "homepage": "https://github.com/raythompsonwebdev/car-rental-foundation#readme",
-    "description": "car rental booking website",
-    "scripts": {
-        "start": "nodemon ./index.js --exec babel-node -e js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "car rental"
-    ]
+  "name": "foundation-zurb-template",
+  "version": "1.0.0",
+  "description": "Official ZURB Template for Foundation for Sites.",
+  "main": "gulpfile.babel.js",
+  "scripts": {
+    "start": "gulp",
+    "build": "gulp build --production"
+  },
+  "author": "ZURB <foundation@zurb.com>",
+  "license": "MIT",
+  "dependencies": {
+    "foundation-sites": "^6.6.0",
+    "jquery": "^3.6.0",
+    "motion-ui": "^2.0.3",
+    "what-input": "^5.1.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.14",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^3.3.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-extname": "^0.2.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-terser": "^1.2.0",
+    "js-yaml": "^3.14.1",
+    "panini": "^1.7.1",
+    "rimraf": "^2.4.3",
+    "style-sherpa": "^1.0.0",
+    "uncss": "^0.17.3",
+    "vinyl-named": "^1.1.0",
+    "webpack": "^4.20.2",
+    "webpack-stream": "^5.1.1",
+    "yargs": "^12.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zurb/foundation-zurb-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zurb/foundation-sites/issues",
+    "email": "foundation@zurb.com"
+  },
+  "private": true
 }
