--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "foundation-sites": "^6.6.0",
     "jquery": "^3.6.0",
     "motion-ui": "^2.0.3",
+    "node-sass": "^5.0.0",
     "what-input": "^5.1.2"
   },
   "devDependencies": {
