--- a/src/data/cars.yml
+++ b/src/data/cars.yml
@@ -1,42 +1,42 @@
 car:
   - name: "Chevrolet Aveo"
-    imageUrl: "assets/img/car-rental-website-cheverolet-aveo-large.png"
+    dataInterchange: "[assets/img/car-rental-website-cheverolet-aveo-small.png, small], [assets/img/car-rental-website-cheverolet-aveo-medium.png, medium], [assets/img/car-rental-website-cheverolet-aveo-large.png, large]"
     type: "Standard"
     text: "Or similar"
     price: "$34.50 per day"
   - name: "Ford Fusion"
-    imageUrl: "assets/img/car-rental-website-ford-fusion-large.png"
+    dataInterchange: "[assets/img//car-rental-website-ford-fusion-small.png, small], [assets/img//car-rental-website-ford-fusion-medium.png, medium], [assets/img//car-rental-website-ford-fusion-large.png, large]"
     type: "Ecomomy"
     text: "Or similar"
     price: "$24.50 per day"
   - name: "Cadillac DT"
-    imageUrl: "assets/img/car-rental-website-cadillac-DTS-large.png"
+    dataInterchange: "[assets/img/car-rental-website-cadillac-DTS-small.png, small], [assets/img/car-rental-website-cadillac-DTS-medium.png, medium], [assets/img/car-rental-website-cadillac-DTS-large.png, large]"
     type: "Luxury"
     text: "Or similar"
     price: "$34.50 per day"
-  - name: "Toyota Avaloo"
-    imageUrl: "assets/img/car-rental-website-toyota-avalon-large.png"
+  - name: "Toyota Avalon"
+    dataInterchange: "[assets/img/car-rental-website-toyota-avalon-small.png, small], [assets/img/car-rental-website-toyota-avalon-medium.png, medium], [assets/img/car-rental-website-toyota-avalon-large.png, large]"
     type: "Premium"
     text: "Or similar"
     price: "$34.50 per day"
 economy:
   - name: "Ford Fusion"
-    imageUrl: "assets/img/car-rental-website-ford-fusion-large.png"
+    dataInterchange: "[assets/img/car-rental-website-ford-fusion-small.png, small], [assets/img/car-rental-website-ford-fusion-medium.png, medium], [assets/img/car-rental-website-ford-fusion-large.png, large]"
     type: "Ecomomy"
     text: "Or similar"
     price: "$24.50 per day"
   - name: "Ford Fusion"
-    imageUrl: "assets/img/car-rental-website-ford-fusion-large.png"
+    dataInterchange: "[assets/img/car-rental-website-ford-fusion-small.png, small], [assets/img/car-rental-website-ford-fusion-medium.png, medium], [assets/img/car-rental-website-ford-fusion-large.png, large]"
     type: "Ecomomy"
     text: "Or similar"
     price: "$24.50 per day"
   - name: "Ford Fusion"
-    imageUrl: "assets/img/car-rental-website-ford-fusion-large.png"
+    dataInterchange: "[assets/img/car-rental-website-ford-fusion-small.png, small], [assets/img/car-rental-website-ford-fusion-medium.png, medium], [assets/img/car-rental-website-ford-fusion-large.png, large]"
     type: "Ecomomy"
     text: "Or similar"
     price: "$24.50 per day"
   - name: "Ford Fusion"
-    imageUrl: "assets/img/car-rental-website-ford-fusion-large.png"
+    dataInterchange: "[assets/img/car-rental-website-ford-fusion-small.png, small], [assets/img/car-rental-website-ford-fusion-medium.png, medium], [assets/img/car-rental-website-ford-fusion-large.png, large]"
     type: "Ecomomy"
     text: "Or similar"
     price: "$24.50 per day"
